test/errors/error29.base
Empty arrays are not supported.
fun foo() {
  val x = [];
          ^
